--- a/Backend/.env
+++ b/Backend/.env
@@ -1,2 +1,4 @@
 PORT=5000
 MONGO_URI = mongodb+srv://dolamanimeher999_db_user:8QPsBib2WP7Cb3kI@cluster0.3omu5yg.mongodb.net/?appName=Cluster0
+JWT_SECRET = your_jwt_secret_key1
+JWT_EXPIRE=7d
